# meu-tarot-rust

./: Cargo.toml  README.md  index.html  script.js  style.css
src/: main.rs
