[package]
name = "veu-da-lua"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "veu-da-lua"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }